log
Thu 28 Sep 2023 07:59:18 PM UTC: 
 heap.c | 19 ++++++++++++++++++-
 1 file changed, 18 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:47:49: error: ‘heapEle’ undeclared (first use in this function); did you mean ‘heapElem’?
   47 |   reserva->heapArray = (heapElem*)malloc(sizeof(heapEle) * 3);
      |                                                 ^~~~~~~
      |                                                 heapElem
heap.c:47:49: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
e412a1f
Thu 28 Sep 2023 07:59:26 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
6e21577
Thu 28 Sep 2023 08:01:19 PM UTC: 
 heap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  1|3
total_score: 10/70
fc78896
Thu 28 Sep 2023 08:01:35 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
a029f19
Thu 28 Sep 2023 08:11:20 PM UTC: 
 heap.c | 22 ++++++++++++++++++++++
 1 file changed, 22 insertions(+)
 tests:  2|2
total_score: 20/70
5b68b63
Thu 28 Sep 2023 08:11:47 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 45/70
d3f4de2
Thu 28 Sep 2023 10:43:34 PM UTC: 
 heap.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  2|2
total_score: 20/70
3cc3634
Thu 28 Sep 2023 10:44:25 PM UTC: 
 heap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
e185160
Thu 28 Sep 2023 10:45:07 PM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  7|1
total_score: 45/70
d007026
Tue 10 Oct 2023 08:22:40 PM UTC: 
 heap.c | 32 +++++++++++++++++++++++++++++++-
 1 file changed, 31 insertions(+), 1 deletion(-)
 tests:  7|1
total_score: 45/70
1f38654
Tue 10 Oct 2023 08:22:54 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 45/70
44e34a6
Tue 10 Oct 2023 08:23:07 PM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  7|1
total_score: 50/70
c4001ae
Tue 10 Oct 2023 08:23:34 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
a8773d7
Tue 10 Oct 2023 08:23:47 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 50/70
d1b09c0
Tue 10 Oct 2023 08:23:59 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|0
total_score: 70/70
e929936
